Added revision date.

--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learning Quantum Optics\r\n",
-    "## A Notebook for learning how to work with the package [QuantumOptics.jl](https://qojulia.org/)\r\n",
-    "### Florian Gahbauer\r\n",
-    "### February 25, 2021"
+    "# Learning Quantum Optics\n",
+    "## A Notebook for learning how to work with the package [QuantumOptics.jl](https://qojulia.org/)\n",
+    "### Florian Gahbauer\n",
+    "### February 25, 2021\n",
+    "### Revised March 6, 2021"
    ]
   },
   {
