Added new file for H 2p.

--- a/learningQuantumOpticsH2pZeeman.ipynb
+++ b/learningQuantumOpticsH2pZeeman.ipynb
@@ -48,12 +48,12 @@
     }
    ],
    "source": [
-    "m1basis=SpinBasis(1//2)                         # basis for spin S1=|S1,m₁> with spin-1/2. |↑>=[1; 0], |↓>=[0; 1] \r\n",
+    "m1basis=SpinBasis(1//0)                         # basis for orbital angular momentum S1=L=|S1,m₁> with spin-1. \r\n",
     "m2basis=SpinBasis(1//2)                         # basis for spin S2=|S2,m₂> with spin-1/2  |↑>=[1; 0], |↓>=[0; 1] \r\n",
     "m1m2basis=CompositeBasis(m1basis,m2basis)       # Composite basis S1 ⊗ S2 (outer product)\r\n",
     "#hbasis=tensor(sbasis,ibasis) # same as above, I think.\r\n",
-    "# We will call this the |S1,S2,m₁,m₂> basis or |m₁,m₂> for short, because we can describe it \r\n",
-    "#by the z-component of each of the spins: |↑↑>, |↑↓>, |↓↑>, |↓↓> "
+    "# We will call this the |L,S,mₗ,mₛ> basis or |mₗ,mₛ> for short, because we can describe it \r\n",
+    "#by the z-component of each of the spins: |1↑>, |1↓>, |0↑>, |0↓>, |-1↑>, |-1↓> "
    ]
   },
   {
