--- a/learningQuantumOpticsH2pZeeman.ipynb
+++ b/learningQuantumOpticsH2pZeeman.ipynb
@@ -20,7 +20,8 @@
     "using LinearAlgebra\r\n",
     "using QuantumOptics\r\n",
     "using WignerSymbols\r\n",
-    "using PyPlot"
+    "using Plots\r\n",
+    "#using PyPlot"
    ]
   },
   {
@@ -274,7 +275,7 @@
     "A=1420.405751768                # Hyperfine structure of the ground state of H, A*hbar/(2*pi), in MHz. \r\n",
     "q=1.6*10^(-19)                  # Electron charge in Coulomb\r\n",
     "mₑ=9.1*10^(-31)                 # Electron mass in kg\r\n",
-    "B₀=range(0,0.05,step=0.0001)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
+    "B₀=range(0,0.03,step=0.0001)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
     "ω₀=-(q/(2*mₑ))*B₀/10^6          # frequency in MHz"
    ]
   },
@@ -330,16 +331,16 @@
    "outputs": [],
    "source": [
     "#  Now we plot each Eigenvalue as a function of magnetic field. \r\n",
-    "figure(figsize=(6,3))\r\n",
-    "xlabel(L\"Magnetic Field [T]\")\r\n",
-    "ylabel(L\"Energy [MHz]\")\r\n",
-    "plot(B₀,E1)\r\n",
-    "plot(B₀,E2)\r\n",
-    "plot(B₀,E3)\r\n",
-    "plot(B₀,E4)\r\n",
-    "plot(B₀,E5)\r\n",
-    "plot(B₀,E6)\r\n",
-    "show()\r\n",
+    "#figure(figsize=(6,3))\r\n",
+    "#xlabel(L\"Magnetic Field [T]\")\r\n",
+    "#ylabel(L\"Energy [MHz]\")\r\n",
+    "Plots.plot(B₀,[E1,E2,E3,E4,E5,E6])\r\n",
+    "#Plots.plot(B₀,E2)\r\n",
+    "#Plots.plot(B₀,E3)\r\n",
+    "#Plots.plot(B₀,E4)\r\n",
+    "#Plots.plot(B₀,E5)\r\n",
+    "#Plots.plot(B₀,E6)\r\n",
+    "\r\n",
     "\r\n"
    ]
   },
