--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -4,11 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learning Quantum Optics\n",
-    "## A Notebook for learning how to work with the package [QuantumOptics.jl](https://qojulia.org/)\n",
-    "### Florian Gahbauer\n",
-    "### February 25, 2021\n",
-    "### Revised March 6, 2021"
+    "# Learning Quantum Optics\r\n",
+    "## A Notebook for learning how to work with the package [QuantumOptics.jl](https://qojulia.org/)\r\n",
+    "### Florian Gahbauer\r\n",
+    "### February 25, 2021\r\n",
+    "### Revised March 6, 2021\r\n",
+    "Added comments many comments to make code and physics more understandable. \r\n",
+    "### Revised March 18, 2021 ###\r\n",
+    "Corrected outer product with operators. They need to mix the two bases, i.e., identity basis of one and operator of other basis. Also, the order of bases in CompositeBasis was not consistent with the rest. It worked, since both bases were spin-1/2, but won't work, when we start combining other angular momentum values.  "
    ]
   },
   {
@@ -20,7 +23,8 @@
     "using LinearAlgebra\r\n",
     "using QuantumOptics\r\n",
     "using WignerSymbols\r\n",
-    "using PyPlot"
+    "using Plots\r\n",
+    "#using PyPlot"
    ]
   },
   {
@@ -50,7 +54,7 @@
    "source": [
     "m1basis=SpinBasis(1//2)                         # basis for spin S1=|S1,m₁> with spin-1/2. |↑>=[1; 0], |↓>=[0; 1] \r\n",
     "m2basis=SpinBasis(1//2)                         # basis for spin S2=|S2,m₂> with spin-1/2  |↑>=[1; 0], |↓>=[0; 1] \r\n",
-    "m1m2basis=CompositeBasis(m1basis,m2basis)       # Composite basis S1 ⊗ S2 (outer product)\r\n",
+    "m1m2basis=CompositeBasis(m2basis,m1basis)       # Composite basis S1 ⊗ S2 (outer product)\r\n",
     "#hbasis=tensor(sbasis,ibasis) # same as above, I think.\r\n",
     "# We will call this the |S1,S2,m₁,m₂> basis or |m₁,m₂> for short, because we can describe it \r\n",
     "#by the z-component of each of the spins: |↑↑>, |↑↓>, |↓↑>, |↓↓> "
@@ -117,12 +121,12 @@
     }
    ],
    "source": [
-    "S1z=tensor(m1basisIdentity,m1basisSz)           # S1z in S1S2 basis: \\hbar diagonal(0.5,0.5,-0.5,-0.5)\r\n",
-    "S2z=tensor(m2basisSz,m2basisIdentity)           # S2z in S1S2 basis: \\hbar digaonal(0.5,-0.5,0.5,-0.5)\r\n",
-    "S1plus=tensor(m1basisIdentity,m1basisSplus)     # S1plus in S1S2 basis \r\n",
-    "S1minus=tensor(m1basisIdentity,m1basisSminus)   # S1minus in S1S2 basis\r\n",
-    "S2plus=tensor(m2basisSplus,m2basisIdentity)     # S2plus in S1S2 basis \r\n",
-    "S2minus=tensor(m2basisSminus,m2basisIdentity)   # S2minus in S1S2 basis\r\n",
+    "S1z=tensor(m2basisIdentity,m1basisSz)           # S1z in S1S2 basis: \\hbar diagonal(0.5,0.5,-0.5,-0.5)\r\n",
+    "S2z=tensor(m2basisSz,m1basisIdentity)           # S2z in S1S2 basis: \\hbar digaonal(0.5,-0.5,0.5,-0.5)\r\n",
+    "S1plus=tensor(m2basisIdentity,m1basisSplus)     # S1plus in S1S2 basis \r\n",
+    "S1minus=tensor(m2basisIdentity,m1basisSminus)   # S1minus in S1S2 basis\r\n",
+    "S2plus=tensor(m2basisSplus,m1basisIdentity)     # S2plus in S1S2 basis \r\n",
+    "S2minus=tensor(m2basisSminus,m1basisIdentity)   # S2minus in S1S2 basis\r\n",
     "S1S2=S1z*S2z+0.5*(S2plus*S1minus+S2minus*S1plus)    # S1̇ S2 in S1S2 basis\r\n",
     "#See eq. (E-19) of Chapter XII.3.b. of Cohen-Tannoudji Quantum Mechanics for S=S1, I=S2\r\n"
    ]
@@ -427,7 +431,7 @@
     "A=1420.405751768                # Hyperfine structure of the ground state of H, A*hbar/(2*pi), in MHz. \r\n",
     "q=1.6*10^(-19)                  # Electron charge in Coulomb\r\n",
     "mₑ=9.1*10^(-31)                 # Electron mass in kg\r\n",
-    "B₀=range(0,0.05,step=0.0001)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
+    "B₀=range(0,0.03,step=0.0001)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
     "ω₀=-(q/(2*mₑ))*B₀/10^6          # frequency in MHz"
    ]
   },
@@ -516,14 +520,14 @@
    ],
    "source": [
     "#  Now we plot each Eigenvalue as a function of magnetic field. \r\n",
-    "figure(figsize=(6,3))\r\n",
-    "xlabel(L\"Magnetic Field [T]\")\r\n",
-    "ylabel(L\"Energy [MHz]\")\r\n",
-    "plot(B₀,E1)\r\n",
-    "plot(B₀,E2)\r\n",
-    "plot(B₀,E3)\r\n",
-    "plot(B₀,E4)\r\n",
-    "\r\n"
+    "#figure(figsize=(6,3))\r\n",
+    "#xlabel(L\"Magnetic Field [T]\")\r\n",
+    "#ylabel(L\"Energy [MHz]\")\r\n",
+    "#plot(B₀,E1)\r\n",
+    "#plot(B₀,E2)\r\n",
+    "#plot(B₀,E3)\r\n",
+    "#plot(B₀,E4)\r\n",
+    "Plots.plot(B₀,[E1,E2,E3,E4],xaxis=\"Magnetic field B [T]\", yaxis=\"Energy [MHz]\")\r\n"
    ]
   },
   {
