Corrected mistakes in physics eqns, constants.

--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -430,9 +430,11 @@
     "#  Now I think we are ready to calculate the Zeeman splitting. \r\n",
     "A=1420.405751768                # Hyperfine structure of the ground state of H, A*hbar/(2*pi), in MHz. \r\n",
     "q=1.6*10^(-19)                  # Electron charge in Coulomb\r\n",
-    "mₑ=9.1*10^(-31)                 # Electron mass in kg\r\n",
-    "B₀=range(0,0.03,step=0.0001)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
-    "ω₀=-(q/(2*mₑ))*B₀/10^6          # frequency in MHz"
+    "mₑ=9.109*10^(-31)                 # Electron mass in kg\r\n",
+    "Mₚ=1.673*10^(-27)                # proton mass in kg\r\n",
+    "B₀=range(0,0.12,step=0.0001)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
+    "ω₀=-(q/(2*mₑ))*B₀/10^6          # frequency in MHz\r\n",
+    "ωₙ=(q/(2*Mₚ))*B₀/10^6"
    ]
   },
   {
@@ -441,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hlist = [A*S1S2 + 2 * ω * S1z for ω=ω₀]         # The Hamiltonian is given by eq. (E-8) in Chapter XII.E.1.b. of Cohen-Tannoudji, Quantum Mechanics \r\n",
+    "Hlist = [A*S1S2 + 2 * (ω/(2*pi)) * S1z for ω=ω₀]         # The Hamiltonian is given by eq. (E-8) in Chapter XII.E.1.b. of Cohen-Tannoudji, Quantum Mechanics \r\n",
     "results=[eigenstates(dense(H)) for H=Hlist]; # This is a way of looping over the elements in the array Hlist to get an array called results.\r\n"
    ]
   },
