--- a/learningQuantumOpticsH2pZeeman.ipynb
+++ b/learningQuantumOpticsH2pZeeman.ipynb
@@ -121,10 +121,15 @@
    "source": [
     "#  Now I think we are ready to calculate the Zeeman splitting. \r\n",
     "A=1420.405751768                # Hyperfine structure of the ground state of H, A*hbar/(2*pi), in MHz. \r\n",
-    "q=1.6*10^(-19)                  # Electron charge in Coulomb\r\n",
-    "mₑ=9.1*10^(-31)                 # Electron mass in kg\r\n",
-    "B₀=range(0,0.05,step=0.0001)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
-    "ω₀=-(q/(2*mₑ))*B₀/10^6          # frequency in MHz"
+    "ħ=1.0546*10^(-34)                  # Planck constant in J-s.\r\n",
+    "c=2.9979*10^(8)                    # Spped of light in m/s.\r\n",
+    "e=1.6*10^(-19)                  # Electron charge in Coulomb\r\n",
+    "mₑ=9.11*10^(-31)                 # Electron mass in kg\r\n",
+    "ϵ₀=8.854*10^(-12)                # Vacuum permitivity\r\n",
+    "α=(1/(4*pi*ϵ₀))*e^2/(ħ*c)                     # Fine structure constant\r\n",
+    "ξ₂ₚ=(1/(48*ħ^2))*mₑ*c^2*α^4*ħ/10^6     # radial part of SO interaction for 2p\r\n",
+    "B₀=range(0,10.0,step=0.01)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
+    "ω₀=-(e/(2*mₑ))*B₀/10^6          # frequency in MHz"
    ]
   },
   {
@@ -133,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Hlist = [A*S1S2 +  ω * (S2z + 2 * S1z ) for ω=ω₀]         # The Hamiltonian is given by eq. (E-8) in Chapter XII.E.1.b. of Cohen-Tannoudji, Quantum Mechanics \r\n",
+    "Hlist = [ξ₂ₚ*S1S2 +  (ω/(2*pi)) * (S1z + 2 * S2z ) for ω=ω₀]         # The Hamiltonian is given by eq. (E-8) in Chapter XII.E.1.b. of Cohen-Tannoudji, Quantum Mechanics \r\n",
     "results=[eigenstates(dense(H)) for H=Hlist]; # This is a way of looping over the elements in the array Hlist to get an array called results.\r\n"
    ]
   },
