Added plot title, axis labels.

--- a/learningQuantumOpticsH2pZeeman.ipynb
+++ b/learningQuantumOpticsH2pZeeman.ipynb
@@ -165,7 +165,7 @@
    "source": [
     "#  Now we plot each Eigenvalue as a function of magnetic field. \r\n",
     "\r\n",
-    "Plots.plot(B₀,[E1,E2,E3,E4,E5,E6])\r\n",
+    "Plots.plot(B₀,[E1,E2,E3,E4,E5,E6], xaxis=\"Magnetic Field [T]\", yaxis=\"Energy Shift [MHz]\",title=\"Hydrogen 2p level Zeeman Effect\")\r\n",
     "\r\n",
     "\r\n"
    ]
