--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -434,7 +434,8 @@
     "Mₚ=1.673*10^(-27)                # proton mass in kg\r\n",
     "B₀=range(0,0.12,step=0.0001)    # 1.0*10^(-4)     Magnetic field in Tesla\r\n",
     "ω₀=-(q/(2*mₑ))*B₀/10^6          # frequency in MHz\r\n",
-    "ωₙ=(q/(2*Mₚ))*B₀/10^6"
+    "gₚ=5.585                         # proton g factor\r\n",
+    "ωₙ=gₚ*(q/(2*Mₚ))*B₀/10^6"
    ]
   },
   {
@@ -529,7 +530,7 @@
     "#plot(B₀,E2)\r\n",
     "#plot(B₀,E3)\r\n",
     "#plot(B₀,E4)\r\n",
-    "Plots.plot(B₀,[E1,E2,E3,E4],xaxis=\"Magnetic field B [T]\", yaxis=\"Energy [MHz]\")\r\n"
+    "Plots.plot(B₀,[E1,E2,E3,E4],xaxis=\"Magnetic field B [T]\", yaxis=\"Energy [MHz]\", title=\"Hydrogen 1s level Zeeman Effect\")\r\n"
    ]
   },
   {
