sketched out path to |F,m> basis.

--- a/learningQuantumOpticsH2pZeeman.ipynb
+++ b/learningQuantumOpticsH2pZeeman.ipynb
@@ -25078,12 +25078,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Operator(dim=6x6)\n  basis: Subspace(superbasis=[Spin(1/2) ⊗ Spin(1)], states:6)\n 1.5+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im   0.0+0.0im\n 0.0+0.0im  0.5+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im   0.0+0.0im\n 0.0+0.0im  0.0+0.0im  -0.5+0.0im   0.0+0.0im  0.0+0.0im   0.0+0.0im\n 0.0+0.0im  0.0+0.0im   0.0+0.0im  -1.5+0.0im  0.0+0.0im   0.0+0.0im\n 0.0+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.5+0.0im   0.0+0.0im\n 0.0+0.0im  0.0+0.0im   0.0+0.0im   0.0+0.0im  0.0+0.0im  -0.5+0.0im"
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now we need do define J².\r\n",
+    "J²Jmbasis=DenseOperator(Jmbasis,Float64.(Diagonal([15//4, 15//4, 15//4, 15//4, 3//4, 3//4])))        # J(J+1) for J=3/2 and 1/2.\r\n",
+    "J₊Jmbasis=DenseOperator(Jmbasis,Float64.([0 0 0 0 0 0; √3 0 0 0 0 0; 0 √4 0 0 0 0; 0 0 √3 0 0 0; 0 0 0 0 1 0; 0 0 0 0 0 0]))\r\n",
+    "J₋Jmbasis=DenseOperator(Jmbasis,Float64.([0 √3 0 0 0 0; 0 0 √4 0 0 0; 0 0 0 √3 0 0; 0 0 0 0 0 0; 0 0 0 0 0 1; 0 0 0 0 0 0]))\r\n",
+    "JzJmbasis=DenseOperator(Jmbasis,Float64.([3//2 0 0 0 0 0;0 1//2 0 0 0 0; 0 0 -1//2 0 0 0;  0 0 0 -3//2 0 0; 0 0 0 0 1//2 0; 0 0 0 0 0 -1//2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Operator(dim=6x6)\n  basis: Subspace(superbasis=[Spin(1/2) ⊗ Spin(1)], states:6)\n  [1, 1]  =  1.0+0.0im\n  [2, 2]  =  1.0+0.0im\n  [3, 3]  =  1.0+0.0im\n  [4, 4]  =  1.0+0.0im\n  [5, 5]  =  1.0+0.0im\n  [6, 6]  =  1.0+0.0im"
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#We will also define the nuclear spin I. For Hydrogen, I=1/2.\r\n",
+    "Ibasis=SpinBasis(1//2)\r\n",
+    "Fmbasis=Ibasis ⊗ Jmbasis\r\n",
+    "I²Ibasis=DenseOperator(Ibasis,Float64.(Diagonal([3//4,3//4]))) \r\n",
+    "I₊Ibasis=DenseOperator(Ibasis,Float64.([0 0;1 0]))\r\n",
+    "I₋Ibasis=DenseOperator(Ibasis,Float64.([0 1;0 0]))\r\n",
+    "IzIbasis=DenseOperator(Ibasis,Float64.([0.5 0;0 0.5]))\r\n",
+    "IOne=identityoperator(Ibasis)\r\n",
+    "JmOne=identityoperator(Jmbasis)\r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Operator(dim=12x12)\n  basis: [Spin(1/2) ⊗ Subspace(superbasis=[Spin(1/2) ⊗ Spin(1)], states:6)]\n  [1 ,  1]  =  0.5+0.0im\n  [2 ,  2]  =  0.5+0.0im\n  [3 ,  3]  =  0.5+0.0im\n  [4 ,  4]  =  0.5+0.0im\n  [5 ,  5]  =  0.5+0.0im\n  [6 ,  6]  =  0.5+0.0im\n  [7 ,  7]  =  0.5+0.0im\n  [8 ,  8]  =  0.5+0.0im\n  [9 ,  9]  =  0.5+0.0im\n  [10, 10]  =  0.5+0.0im\n  [11, 11]  =  0.5+0.0im\n  [12, 12]  =  0.5+0.0im"
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now we take another outer product to define our operators in the |I,mᵢ> ⊗ |J,mⱼ> basis.\r\n",
+    "J² = IOne ⊗ J²Jmbasis\r\n",
+    "J₊ = IOne ⊗ J₊Jmbasis\r\n",
+    "J₋ = IOne ⊗ J₋Jmbasis\r\n",
+    "Jz = IOne ⊗ JzJmbasis\r\n",
+    "Lz = IOne ⊗ LzJmbasis\r\n",
+    "Sz = IOne ⊗ SzJmbasis\r\n",
+    "LS = IOne ⊗ S1S2Jmbasis\r\n",
+    "I² = I²Ibasis ⊗ JmOne\r\n",
+    "I₊ = I₊Ibasis ⊗ JmOne\r\n",
+    "I₋ = I₋Ibasis ⊗ JmOne\r\n",
+    "Iz = IzIbasis ⊗ JmOne"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now we need the J+ and J- operators in the Jm basis. Not quite sure how to do that yet. \r\n",
-    "# Then we would just add it to the "
+    "# Now we'll need another Clebsch-Gordan matrix to couple the |I,mᵢ> ⊗ |J,mⱼ> basis with the |F,mf> basis. \r\n",
+    "# This matrix will be 12 x 12. Anything larger and we will have to start using some kind of loop. \r\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Then we will have to convert our operators from the |I,mᵢ> ⊗ |J,mⱼ> to the |F,mf> basis: J², J₊, J₋, Jz, I², I₊, I₋, Iz, Lz, and Sz. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we can express I.J in the usual way: I²+J² +2*Iz*Jz + I₊J₋ + I₋J₊ . And add the LS, Lz, and Sz terms. "
    ]
   }
  ],
